src/main/java/com/example/jallowbooks/errors/BadRequestException.java
package com.example.jallowbooks.errors;

public class BadRequestException  extends RuntimeException  {
    public BadRequestException(String message) {
        super(message);
    }
}
